# fastapi-practice

./: .gitignore  db_integration_notes.md  pyproject.toml
alembic/: env.py
alembic/versions/: 409076cc6413_intial_tables.py
src/app/: main.py
src/app/api/: deps.py
src/app/core/: config.py  database.py  exceptions.py  security.py
src/app/crud/: base.py  task.py  user.py
src/app/models/: database.py  task.py  user.py
src/app/routers/: auth.py  tasks.py
tests/: conftest.py  test_auth.py  test_tasks.py
tests/core/: test_math_operations.py
