[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "govindKulk",email = "kulkarnigovind2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "bcrypt (==4.0.1)",
    "aiofiles (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
aiosqlite = "^0.21.0"
pytest-asyncio = "^1.3.0"
anyio = "^4.11.0"
trio = "^0.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
